--- a/melaka_wanderlust/pubspec.yaml
+++ b/melaka_wanderlust/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   google_sign_in: ^6.1.6
   provider: ^6.1.1
   image_picker: ^1.0.5
+  file_picker: ^6.1.1
   google_maps_flutter: ^2.2.8
   custom_info_window: ^1.0.1
   url_launcher: ^6.2.2
@@ -88,7 +89,7 @@ flutter:
    - lib/images/attractions/
    - lib/images/restaurants/
    - lib/images/promotions/
-   - assets/promo.jpg
+
 
   #   - images/a_dot_ham.jpeg
 
